Fix logo alignment in rtl language in hamburger menu

--- a/scss/theme/_mobile.scss
+++ b/scss/theme/_mobile.scss
@@ -43,3 +43,17 @@
     }
   }
 }
+
+.mobile-logo {
+  svg, img {
+    [dir=ltr] & {
+      margin-left: 1.4rem;
+      margin-right: auto;
+    }
+    
+    [dir=rtl] & {
+      margin-left: auto;
+      margin-right: 1.4rem;
+    }
+  }
+}
